Corrected Z-Index Issues With Header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ header {
     position: sticky;
     position: -webkit-sticky; /*Adds Sticky Support For Safari */
     top: 0;
+    z-index: 9999;
 }
 
 header h1 {
